Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42534

Freetype on Windows doesn't respect hinting preferences

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.1
    • 5.4.0 Beta
    • GUI: Font handling
    • None
    • Windows 7 / bundled freetype / Qt 5.4
    • 6593531a4dccdfb878d2ee3a789f0e937d73e8e7

    Description

      QFont::setHintingPreference() doesn't have any effect on Windows with FreeType engine.

      Debugging shows that hinting is set inside QWindowsFontDatabase::fontEngine() and QFontConfigDatabase::fontEngine() methods. But Windows with FT uses QBasicFontDatabase, which wasn't setting hinting in one of it's fontEngine() overloads.

      Attachments

        For Gerrit Dashboard: QTBUG-42534
        # Subject Branch Project Status CR V

        Activity

          People

            iamsergio Sergio Martins
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes